# MemArena

./: .env.example  .gitignore  README.md  docker-compose.yml  package.json  tmp_concurrency_check.py
backend/: Dockerfile  README.md  pyproject.toml  requirements-lock.txt  requirements.txt
backend/app/: __init__.py  config.py  main.py  registry.py
backend/app/core/: __init__.py  interfaces.py
backend/app/factories/: __init__.py  model_factory.py
backend/app/implementations/: __init__.py
backend/app/implementations/assemblers/: __init__.py  basic_assemblers.py
backend/app/implementations/engines/: __init__.py  in_memory_engines.py
backend/app/implementations/evaluation/: __init__.py  llm_judge_bench.py
backend/app/implementations/processors/: __init__.py  basic_processors.py
backend/app/implementations/reflectors/: __init__.py  basic_reflectors.py
backend/app/models/: __init__.py  contracts.py
backend/app/services/: __init__.py  dataset_loader.py  global_model_config.py  request_audit.py  short_term_memory.py
backend/datasets/: builtin_memory_smoke.json
backend/scripts/: benchmark_assembler_comparison.py  benchmark_entity_live.py  benchmark_relevance_presets.py  smoke_convergence_speed.py  summarize_assembler_reports.py  summarize_relevance_reports.py
backend/tests/: test_regressions.py
docs/: adding_new_modules.md  architecture.md  datasets.md  evaluation_criteria.md  memory_modules_catalog.md
frontend/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
frontend/src/: App.vue  App.vue.js  main.js  (+3 more)
(+7 files in other folders)
