[project]
name = "memarena-backend"
version = "0.1.0"
description = "MemArena backend built with FastAPI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.3.0",
  "python-multipart>=0.0.9",
  "httpx>=0.27.0",
  "chromadb>=1.0.12",
  "scikit-learn>=1.5.0",
  "spacy>=3.7.0"
]

[project.optional-dependencies]
local = [
  "transformers>=4.44.0",
  "torch>=2.3.0"
]

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.hatch.build.targets.sdist]
include = ["app", "pyproject.toml", "README.md"]

[tool.uv]
dev-dependencies = [
  "pytest>=8.3.0",
  "ruff>=0.5.0"
]
